bug fixes...
-Can’t edit custom fields after save (ex. Price)
-Warranty field auto populates with “0” but doesn’t accept that value. You have to manually add it again for the Save button to activate.
-Styling breaks on smaller screen sizes when tags are added
-No delete confirmation
-Newest to oldest sort goes off edit date, not added date
-Can’t search by tag

--- a/src 2/styles/product-details.module.css
+++ b/src 2/styles/product-details.module.css
@@ -169,6 +169,40 @@
   color: white;
 }
 
+.alertContent {
+  z-index: 1005;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 12px;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 5px -1px,
+    rgba(0, 0, 0, 0.14) 0px 6px 10px 0px, rgba(0, 0, 0, 0.15) 0px 1px 18px 0px;
+  width: 90%;
+  max-width: 350px;
+}
+
+.alertActions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.alertActions > button {
+  padding: 0.75rem 2rem;
+  font-size: 1rem;
+  border-radius: 12px;
+  border: none;
+  background-color: #ccc;
+}
+
+#confirmDeleteButton {
+  background-color: #ffdbdc;
+  color: #ce2c31;
+}
+
 @media (min-width: 768px) {
   #previewImgWrapper {
     max-height: 200px;
